# music_generator

./: .pre-commit-config.yaml  README.md  bach_847.mid  generate_music.py  midi_processing.py  music_train.h5  music_train.py  pyproject.toml
